--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -7,6 +7,6 @@
     </mat-form-field>
   </div>
   <ngb-pagination [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize" [rotate]="true"
-    [boundaryLinks]="true" (pageChange)="pageChangeFunc()">
+    [boundaryLinks]="true" (pageChange)="chngPageNo()">
   </ngb-pagination>
 </div>
