--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -1,7 +1,7 @@
 <div class="groups-section overflow-hidden">
   <div class="buttons-row row mt-3 justify-content-between mx-2">
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" (click)="openModal(grpModal)">
+    <button type="button" class="btn btn-primary" (click)="openModal(grpModal, false)">
       Create New Group
     </button>
   </div>
@@ -106,7 +106,7 @@
                   </tr>
                 </thead>
                 <tbody *ngIf="!loading && grps.length > 0">
-                  <tr *ngFor="let grp of grps" (click)="toggleInfo(grp)">
+                  <tr *ngFor="let grp of grps" (click)="toggleInfo(grp)" [ngClass]="{'deact': !grp.isActive}">
                     <td>
                       <span class="d-block">{{grp.name}}</span>
                     </td>
@@ -122,29 +122,6 @@
             </div>
             <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
               (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
-            <!-- <div class="card-footer row justify-content-between mx-0">
-              <div class="pages">
-                <mat-form-field appearance="outline" class="mr-2">
-                  <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
-                    <mat-option *ngFor="let lP of lmtPage" [value]="lP">{{lP}}</mat-option>
-                  </mat-select>
-                </mat-form-field>
-                <span>Showing 1-10 of 100 </span>
-              </div>
-              <ul class="pagination">
-                <li class="page-item disabled">
-                  <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
-                    <i class="fas fa-chevron-left"></i>
-                  </a>
-                </li>
-                <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
-                <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
-                <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
-                <li class="page-item">
-                  <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
-                </li>
-              </ul>
-            </div> -->
           </div>
         </div>
       </div>
@@ -163,10 +140,10 @@
           </div>
           <div class="card-header bg-hi-light-grey p-1 row m-0">
             <button class="btn btn-light">
-              <i class="fas fa-edit" (click)="openModal(grpModal, 'edit');"></i>
+              <i class="fas fa-edit" (click)="openModal(grpModal, true);"></i>
             </button>
-            <button class="btn btn-light">
-              <i class="fa fa-trash" (click)="delGrp();"></i>
+            <button class="btn btn-light" (click)="actDeactGrp()">
+              {{rowInfo.isActive?'Deactivate':'Activate'}}
             </button>
           </div>
           <div class="card-body">
