reource module created, add exp, collec,files in resource and all routing changes resp, change filehelper name, add content apis and methods,use ngclass instead of ifelse in content modal for showing icon

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -778,12 +778,7 @@
     <div class="w-100 dark-bg-hover p-2 rounded" (click)="showPropsSection()">
       Properties
       <div class="float-right">
-        <ng-container *ngIf="dispPropsSec; else elseIcon">
-          <i class="fa fa-angle-up"></i>
-        </ng-container>
-        <ng-template #elseIcon>
-          <i class="fa fa-angle-down"></i>
-        </ng-template>
+        <i class="fa fa-angle-up" [ngClass]="{'fa-angle-up': !dispPropsSec,'fa-angle-down': dispPropsSec}"></i>
       </div>
     </div>
     <div class="mt-2" *ngIf="dispPropsSec">
