--- a/src/app/home-layout/header/header.component.html
+++ b/src/app/home-layout/header/header.component.html
@@ -69,7 +69,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="'/account/divisions/list'"><i class="fas fa-cog mr-2"></i>Settings</a>
             <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-lock mr-2"></i>Lock Screen</a>
-            <a class="dropdown-item" target="_blank" [routerLink]="'/web-app/collections'">
+            <a class="dropdown-item" target="_blank" [routerLink]="'/web-app/resource/collections'">
               <i class="fas fa-briefcase mr-2"></i>Switch to web app
             </a>
             <div class="dropdown-divider"></div>
