--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -4,11 +4,12 @@
       <img src="assets/images/logo.png" alt="Hi Force"></a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item align-self-center active">
-          <a class="nav-link" href="javascript:void(0)">Resource</a>
+        <li class="nav-item align-self-center">
+          <a class="nav-link" [routerLinkActive]="['active']"
+            [routerLink]="'/web-app/resource/collections'">Resource</a>
         </li>
         <li class="nav-item align-self-center">
-          <a class="nav-link" href="javascript:void(0)">Shares</a>
+          <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/share'">Shares</a>
         </li>
       </ul>
       <ul class="navbar-nav toggle-navbar ml-auto">
