--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -2,22 +2,14 @@
   <h3 class="mb-4 clearfix heading align-self-center">
     Testabc
     <div class="float-right d-flex">
-      <div class="dropdown align-self-center mr-3">
-        <div class="curs-ptr" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          <i class="fas fa-share-square"></i>
-        </div>
-        <div class="dropdown-menu" aria-labelledby="shareDD">
-          <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-          <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
-        </div>
+      <div class="btn btn-light" (click)="openModal(email)">
+        <i class="fa fa-envelope mr-1"></i>
       </div>
-      <div class="curs-ptr align-self-center mr-3">
-        <i class="fas fa-trash-alt"></i>
+      <div class="btn btn-light" (click)="openModal(getLink)">
+        <i class="fa fa-link mr-1"></i>
       </div>
-      <div class="dropdown align-self-center mr-3">
-        <div class="curs-ptr" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
+      <div class="dropdown align-self-center mr-5">
+        <div class="btn btn-light curs-ptr" type="button" id="optionsDD" data-toggle="dropdown">
           <i class="fas fa-ellipsis-h"></i>
         </div>
         <div class="dropdown-menu" aria-labelledby="optionsDD">
@@ -30,10 +22,11 @@
               <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
             </div>
           </a>
+          <a class="dropdown-item curs-ptr"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
         </div>
       </div>
       <i class="fa mr-4 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
-        (click)="switchView()"></i>
+        (click)="view = !view;"></i>
       <button class="btn btn-primary" (click)="openModal(addResource)">Add Resource</button>
     </div>
   </h3>
