--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -15,7 +15,8 @@
   </div>
   <app-loader [type]="'page'" *ngIf="loading"></app-loader>
   <div class="mt-2 row collections" *ngIf="view && !loading">
-    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let colctn of colctnArr">
+    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let colctn of colctnArr"
+      [routerLink]="'/web-app/resource/collections/'+colctn.id">
       <div class="card curs-ptr">
         <div class="card-body">
           <div class="imagePreview text-center">
@@ -32,7 +33,7 @@
                 <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
               </div>
             </div>
-            <div class="btn my-1">
+            <div class="btn my-1" (click)="delColctn(colctn.id)">
               <i class="fas fa-trash-alt"></i>
             </div>
             <div class="dropleft">
@@ -61,7 +62,7 @@
           <div class="float-left text-secondary d-flex">
             <div class="date">{{colctn.updatedDate.split('T')[0]}}</div>
             <div class="mx-2">l</div>
-            <div class="items">{{colctn.collectionContents.length}} Item(s)</div>
+            <!-- <div class="items">{{colctn.collectionContents.length}} Item(s)</div> -->
           </div>
           <div class="float-right">
             <mat-checkbox></mat-checkbox>
@@ -83,7 +84,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let colctn of colctnArr">
+        <tr *ngFor="let colctn of colctnArr" [routerLink]="'/web-app/resource/collections/'+colctn.id">
           <td class="align-middle">
             <mat-checkbox></mat-checkbox>
           </td>
@@ -108,7 +109,7 @@
                   <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
                 </div>
               </div>
-              <div class="btn">
+              <div class="btn" (click)="delColctn(colctn.id)">
                 <i class="fas fa-trash-alt"></i>
               </div>
               <div class="dropleft">
